# moat

./: .gitignore  Cargo.toml  Rocket.toml  package.json  pnpm-lock.yaml  tailwind.config.js
entity/: Cargo.toml
entity/src/entities/: key.rs  mod.rs  prelude.rs  registration_link.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220803_000818_create_user.rs  m20220803_000830_create_key.rs  m20220803_000835_create_registration.rs
src/: auth.rs  main.rs  models.rs  templates.rs  utils.rs
src/db/: mod.rs  pool.rs  user.rs
static/: style.css
static/js/: authenticate.js  color-pick.js  popup.iife.min.js  register.js  simple-webauthn.js
templates/: admin_settings.html  base.html  index.html  key.html  new_key.html  sign_in.html  style.css
templates/admin/: registration_links.html
templates/components/: access_logs.html  color_picker.html  key_tile.html  registration_link.html
